apps/test/HTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: test
spec:
  parentRefs:
  - name: rajsingh-info
    namespace: gateway-system
  hostnames:
  - "test.rajsingh.info"  
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: web-app
      port: 80
