apps/test/manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app
  namespace: test
  labels:
    app.kubernetes.io/name: web-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: web-app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: web-app
    spec:
      containers:
      - image: nginx
        name: web-app
        command: 
          - /bin/sh
          - -c
          - "echo 'welcome to my web app!' > /usr/share/nginx/html/index.html && nginx -g 'daemon off;'"
      dnsConfig:
            options:
              - name: ndots
                value: "2"
---
apiVersion: v1
kind: Service
metadata:
  name: web-app
  namespace: test
  labels:
    app: web-app
spec:
  selector:
    app: web-app
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
--- 
apiVersion: v1
kind: Pod
metadata:
  name: debian
  namespace: test
spec:
  containers:
  - name: terminal
    image: debian
    command:
      - "/bin/sh"
    args:
      - "-c"
      - "apt-get update && apt-get install -y net-tools curl && tail -f /dev/null"
