apps/test/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: test
  labels:
    kustomize.toolkit.fluxcd.io/prune: disabled
